--- a/Simple-ToDo/wwwroot/css/site.css
+++ b/Simple-ToDo/wwwroot/css/site.css
@@ -33,3 +33,13 @@
         display: none;
     }
 }
+
+/* Custom */
+div.todo-panel {
+    margin-top: 15px;
+}
+
+table tr.done {
+    text-decoration: line-through;
+    color: #888;
+}
