--- a/Simple-ToDo/Views/Todo/Index.cshtml
+++ b/Simple-ToDo/Views/Todo/Index.cshtml
@@ -12,8 +12,8 @@
         <thead>
             <tr>
                 <td>&#x2714;</td>
-                <td>Item</td>
-                <td>Due</td>
+                <td>To Do</td>
+                <td>Due Date</td>
             </tr>
         </thead>
 
