--- a/Simple-ToDo/Views/Todo/Index.cshtml
+++ b/Simple-ToDo/Views/Todo/Index.cshtml
@@ -19,13 +19,16 @@
 
         @foreach (var item in Model.Items)
         {
-        <tr>
-            <td>
-                <input type="checkbox" class="done-checkbox" />
-            </td>
-            <td>@item.Title</td>
-            <td>@item.DueAt.Humanize()</td>
-        </tr>
+            <tr>
+                <td>
+                    <form asp-action="MarkDone" method="POST">
+                        <input type="checkbox" class="done-checkbox" />
+                        <input type="hidden" name="id" value="@item.Id" />
+                    </form>
+                </td>
+                <td>@item.Title</td>
+                <td>@item.DueAt.Humanize()</td>
+            </tr>
         }
     </table>
 
